vehicle movement tweaks

--- a/RageRace/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RageRace/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -76,8 +76,8 @@ CreateAudioDeviceForEveryPlayer=False
 ClientWindowHeight=480
 AdditionalServerGameOptions=
 AdditionalLaunchOptions=
-MultipleInstanceLastHeight=0
-MultipleInstanceLastWidth=0
+MultipleInstanceLastHeight=720
+MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@ANDRES-XL
 LastExecutedLaunchName=ANDRES-XL
 LastExecutedPIEPreviewDevice=
@@ -103,7 +103,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/VehicleBP/Maps/VehicleExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SourcesExpanded=False
+ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
@@ -122,6 +122,9 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Blueprints
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/VehicleBP/Maps/VehicleExampleMap
@@ -141,9 +144,54 @@ LightmassPrimitiveSettingsObject.Lightmass=True
 Generic.Surface Materials=True
 Generic.Geometry=True
 Generic.Surface Properties=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Actor=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Replication=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
+PaintBrushSettings.Brush=True
+PaintBrushSettings.View=True
+PaintModeSettings.VertexPainting=True
+PaintModeSettings.Visualization=True
+VehicleGameMode_C.Tick=True
+VehicleGameMode_C.Classes=True
+VehicleGameMode_C.Game=True
+VehicleGameMode_C.GameMode=True
+Sedan_C.Display=True
+Sedan_C.Tick=True
+Sedan_C.Game=True
+Sedan_C.Camera=True
+Sedan_C.Pawn=True
+Sedan_C.Rendering=True
+Sedan_C.Replication=True
+Sedan_C.Input=True
+Sedan_C.Actor=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.Events=True
+VehicleOverview_C.Testing=True
+VehicleOverview_C.Tutorial=True
+VehicleOverview_C.Stages=True
+K2Node_InputAxisEvent.Input=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Sedan_C="\"Object.VehicleMovement\" \"Object.VehicleMovement.Object.ThrottleInputRate\" \"Object.VehicleMovement\" \"Object.VehicleMovement.Object.ThrottleInputRate\" "
+WheeledVehicle="\"Object.VehicleMovement\" \"Object.VehicleMovement.Object.ThrottleInputRate\" \"Object.VehicleMovement\" \"Object.VehicleMovement.Object.ThrottleInputRate\" "
+Pawn="\"Object.VehicleMovement\" \"Object.VehicleMovement.Object.ThrottleInputRate\" \"Object.VehicleMovement\" \"Object.VehicleMovement.Object.ThrottleInputRate\" "
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -828,5 +876,26 @@ Voice.TimeStamp=2019.08.03-20.05.45
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2019.08.03-20.04.56
 MovieSceneCapture.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2019.08.03-20.04.39
+HierarchicalLODUtilities.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2019.08.03-20.04.12
+BlueprintGraph.LastCompileMethod=Unknown
+
+[DetailCustomWidgetExpansion]
+K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,
+Sedan_C=K2Node_VariableGet.DefaultValueCategory.None,
+
+[PlacementMode]
+RecentlyPlaced=/Game/Geometry/Meshes/LoopBig.LoopBig;
+
+[ContentBrowserRecent]
+MRUItem0=/Game/VehicleBP/VehicleOverview
+MRUItem1=/Game/VehicleBP/Sedan/Sedan
+MRUItem2=/Game/VehicleBP/Blueprints/VehicleGameMode
+
+[AssetEditorToolkitTabLocation]
+/Game/VehicleBP/Blueprints/VehicleGameMode.VehicleGameMode=1
+/Game/VehicleBP/VehicleOverview.VehicleOverview=1
+/Game/VehicleBP/Sedan/Sedan.Sedan=1
 
 
