--- a/RageRace/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RageRace/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -130,7 +130,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/VehicleBP/Maps/VehicleExampleMap
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 Brush.TransformCommon=True
@@ -186,12 +186,123 @@ VehicleOverview_C.Testing=True
 VehicleOverview_C.Tutorial=True
 VehicleOverview_C.Stages=True
 K2Node_InputAxisEvent.Input=True
+TextRenderActor.TransformCommon=True
+TextRenderActor.Materials=True
+TextRenderActor.Text=True
+TextRenderActor.Lighting=True
+TextRenderActor.Rendering=True
+TextRenderActor.Tags=True
+TextRenderActor.Cooking=True
+TextRenderActor.Replication=True
+TextRenderActor.Input=True
+Sedan_C.TransformCommon=True
+PrecomputedVisibilityVolume.TransformCommon=True
+PrecomputedVisibilityVolume.Replication=True
+PrecomputedVisibilityVolume.BrushSettings=True
+PrecomputedVisibilityVolume.Actor=True
+LandscapeEditorObject.New Landscape=True
+LandscapeEditorObject.LandscapeEditor=True
+LandscapeEditorObject.Brush Settings=True
+LandscapeEditorObject.Tool Settings=True
+LandscapeEditorObject.Target Layers=True
+LandscapeSplineControlPoint.LandscapeSpline=True
+LandscapeSplineControlPoint.LandscapeDeformation=True
+LandscapeSplineControlPoint.Mesh=True
+LandscapeSplineControlPoint.Collision=True
+LandscapeComponent.TransformCommon=True
+LandscapeComponent.Materials=True
+LandscapeComponent.LandscapeComponent=True
+LandscapeComponent.BakedTextures=True
+LandscapeComponent.Lighting=True
+LandscapeComponent.Tags=True
+LandscapeComponent.Activation=True
+LandscapeComponent.Cooking=True
+Landscape.TransformCommon=True
+Landscape.LOD=True
+Landscape.LOD Distribution=True
+Landscape.Tessellation=True
+Landscape.Lighting=True
+Landscape.Landscape=True
+Landscape.Rendering=True
+Landscape.Lightmass=True
+Landscape.Collision=True
+Landscape.HierarchicalLOD=True
+Landscape.Replication=True
+Landscape.Input=True
+Landscape.Actor=True
+LandscapeGizmoActiveActor.TransformCommon=True
+LandscapeGizmoActiveActor.LandscapeGizmoActiveActor=True
+LandscapeGizmoActiveActor.Gizmo=True
+LandscapeGizmoActiveActor.Rendering=True
+LandscapeGizmoActiveActor.Replication=True
+LandscapeGizmoActiveActor.Input=True
+LandscapeGizmoActiveActor.Actor=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.Rendering=True
+DirectionalLight.LightShafts=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.Lightmass=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.RayTracing=True
+DirectionalLight.Tags=True
+DirectionalLight.Cooking=True
+DirectionalLight.Actor=True
+LightmassImportanceVolume.TransformCommon=True
+LightmassImportanceVolume.Replication=True
+LightmassImportanceVolume.BrushSettings=True
+LightmassImportanceVolume.Actor=True
+PostProcessVolume.TransformCommon=True
+PostProcessVolume.Lens=True
+PostProcessVolume.Color Grading=True
+PostProcessVolume.Film=True
+PostProcessVolume.Mobile Tonemapper=True
+PostProcessVolume.Rendering Features=True
+PostProcessVolume.PostProcessVolumeSettings=True
+PostProcessVolume.BrushSettings=True
+PostProcessVolume.Replication=True
+PostProcessVolume.Actor=True
+SkyLight.TransformCommon=True
+SkyLight.Light=True
+SkyLight.Rendering=True
+SkyLight.DistanceFieldAmbientOcclusion=True
+SkyLight.RayTracing=True
+SkyLight.SkyLight=True
+SkyLight.Tags=True
+SkyLight.Cooking=True
+SkyLight.Actor=True
+AtmosphericFog.TransformCommon=True
+AtmosphericFog.Atmosphere=True
+AtmosphericFog.Lighting=True
+AtmosphericFog.Rendering=True
+AtmosphericFog.Tags=True
+AtmosphericFog.Cooking=True
+AtmosphericFog.Replication=True
+AtmosphericFog.Actor=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+LandscapeSplineSegment.LandscapeSpline=True
+LandscapeSplineSegment.LandscapeSplineSegment=True
+LandscapeSplineSegment.LandscapeDeformation=True
+LandscapeSplineSegment.LandscapeSplineMeshes=True
+LandscapeSplineSegment.Collision=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Sedan_C="\"Object.VehicleMovement\" \"Object.VehicleMovement.Object.ThrottleInputRate\" \"Object.VehicleMovement\" \"Object.VehicleMovement.Object.ThrottleInputRate\" "
-WheeledVehicle="\"Object.VehicleMovement\" \"Object.VehicleMovement.Object.ThrottleInputRate\" \"Object.VehicleMovement\" \"Object.VehicleMovement.Object.ThrottleInputRate\" "
-Pawn="\"Object.VehicleMovement\" \"Object.VehicleMovement.Object.ThrottleInputRate\" \"Object.VehicleMovement\" \"Object.VehicleMovement.Object.ThrottleInputRate\" "
+Sedan_C=
+WheeledVehicle=
+Pawn=
+PrecomputedVisibilityVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+LandscapeSplineSegment="\"Object.LandscapeSplineSegment\" \"Object.LandscapeSplineMeshes\" "
+Object=
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -884,8 +995,10 @@ BlueprintGraph.LastCompileMethod=Unknown
 [DetailCustomWidgetExpansion]
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,
 Sedan_C=K2Node_VariableGet.DefaultValueCategory.None,
+LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Geometry/Meshes/LoopBig.LoopBig;
 
 [ContentBrowserRecent]
@@ -897,5 +1010,28 @@ MRUItem2=/Game/VehicleBP/Blueprints/VehicleGameMode
 /Game/VehicleBP/Blueprints/VehicleGameMode.VehicleGameMode=1
 /Game/VehicleBP/VehicleOverview.VehicleOverview=1
 /Game/VehicleBP/Sedan/Sedan.Sedan=1
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
+
+[LandscapeEdit]
+AlphaBrushAutoRotate=True
+WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
+WorldSpacePatternBrushSettings.bCenterTextureOnOrigin=False
+WorldSpacePatternBrushSettings.RepeatSize=3200.000000
+bUseFlattenTarget=False
+FlattenTarget=0.000000
+RampWidth=2000.000000
+RampSideFalloff=0.400000
+SmoothFilterKernelSize=4
+MirrorOp=0
+NewLandscapeMaterialName=
+ImportLandscape_AlphamapType=0
+ShowUnusedLayers=True
+
+[MessageLog]
+LastLogListing=LoadErrors
 
 
