hice una cajita y cosas asi

--- a/RageRace/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RageRace/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -131,7 +131,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/Others/Rocket
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -163,10 +163,10 @@ Generic.Geometry=True
 Generic.Surface Properties=True
 StaticMeshActor.TransformCommon=True
 StaticMeshActor.StaticMesh=True
-StaticMeshActor.Materials=True
-StaticMeshActor.Physics=True
-StaticMeshActor.Collision=True
-StaticMeshActor.Lighting=True
+StaticMeshActor.Materials=False
+StaticMeshActor.Physics=False
+StaticMeshActor.Collision=False
+StaticMeshActor.Lighting=False
 StaticMeshActor.Rendering=True
 StaticMeshActor.Tags=True
 StaticMeshActor.Cooking=True
@@ -191,7 +191,7 @@ Sedan_C.Display=True
 Sedan_C.Tick=True
 Sedan_C.Game=True
 Sedan_C.Camera=True
-Sedan_C.Pawn=True
+Sedan_C.Pawn=False
 Sedan_C.Rendering=True
 Sedan_C.Replication=True
 Sedan_C.Input=True
@@ -408,6 +408,80 @@ Actor.Rendering=True
 Actor.Replication=True
 Actor.Input=True
 Actor.Actor=True
+FbxImportUI.Mesh=True
+FbxImportUI.Transform=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.Material=True
+FbxImportUI.FbxFileInformation=True
+StaticMeshActor.MaterialParameters=False
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.EditableMesh=True
+StaticMesh.Navigation=True
+AssetViewerSettings.Settings=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+BoxBP_C.Tick=True
+BoxBP_C.Rendering=True
+BoxBP_C.Replication=True
+BoxBP_C.Input=True
+BoxBP_C.Actor=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+BoxBP_C.TransformCommon=True
+StaticMeshComponent.MaterialParameters=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Mobile=True
+BoxBP_C.Collision=True
+MulticastDelegateProperty.Delegate=True
+MulticastDelegateProperty.DelegateInputs=True
+MulticastDelegateProperty.Variable=True
+MulticastDelegateProperty.DefaultValueCategory=True
+rocketbp_C.Tick=True
+rocketbp_C.Rendering=True
+rocketbp_C.Replication=True
+rocketbp_C.Input=True
+rocketbp_C.Actor=True
+rocketbp_C.TransformCommon=True
+PlayerState.Replication=True
+PlayerState.Actor=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -418,10 +492,16 @@ PrecomputedVisibilityVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSett
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 LandscapeSplineSegment="\"Object.LandscapeSplineSegment\" \"Object.LandscapeSplineMeshes\" \"Object.LandscapeSplineMeshes.SplineMeshes\" \"Object.LandscapeSplineMeshes.SplineMeshes.SplineMeshes[0]\" \"Object.LandscapeSplineMeshes.SplineMeshes.SplineMeshes[0].CenterAdjust\" \"Object.LandscapeSplineMeshes.SplineMeshes.SplineMeshes[0].Scale\" "
-Object=
+Object="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 REINST_Sedan_C_50="\"Object.Vehicle.VehicleMovement.Object.VehicleInput.ThrottleInputRate\" \"Object.Vehicle.VehicleMovement.Object.VehicleInput.BrakeInputRate\" \"Object.Vehicle.VehicleMovement.Object.VehicleInput.HandbrakeInputRate\" \"Object.Vehicle.VehicleMovement.Object.VehicleInput.SteeringInputRate\" "
 REINST_Sedan_C_66="\"Object.Vehicle.VehicleMovement.Object.VehicleInput.ThrottleInputRate\" \"Object.Vehicle.VehicleMovement.Object.VehicleInput.BrakeInputRate\" \"Object.Vehicle.VehicleMovement.Object.VehicleInput.HandbrakeInputRate\" \"Object.Vehicle.VehicleMovement.Object.VehicleInput.SteeringInputRate\" "
 LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData\" "
+StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1112,14 +1192,23 @@ BlueprintGraph.TimeStamp=2019.08.03-20.04.12
 BlueprintGraph.LastCompileMethod=Unknown
 NewLevelDialog.TimeStamp=2019.08.03-20.05.01
 NewLevelDialog.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2019.08.03-20.05.28
+StaticMeshEditor.LastCompileMethod=Unknown
 
 [DetailCustomWidgetExpansion]
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,
 Sedan_C=K2Node_VariableGet.DefaultValueCategory.None,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 LandscapeSplineSegment=LandscapeSplineSegment.Collision.Collision,
+StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,
+StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Others/Rocket/rocketbp.rocketbp;
+RecentlyPlaced=/Game/Others/Box/BoxBP.BoxBP;
+RecentlyPlaced=/Game/Others/Rocket/rocket.rocket;
+RecentlyPlaced=/Game/Others/Box/box.box;
+RecentlyPlaced=/Game/Others/box2.box2;
 RecentlyPlaced=/Game/Sedan/Sedan.Sedan;
 RecentlyPlaced=/Game/UnrealAssets/VehicleBP/Sedan/Sedan.Sedan;
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
@@ -1128,22 +1217,28 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 RecentlyPlaced=/Game/UnrealAssets/Geometry/Meshes/LoopBig.LoopBig;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/MainLevel
-MRUItem1=/Game/Levels/CircuitTestMap
-MRUItem2=/Game/UnrealAssets/VehicleBP/Sedan/Sedan1
-MRUItem3=/Game/UnrealAssets/VehicleBP/Sedan/Sedan
-MRUItem4=/Game/StarterContent/Maps/Advanced_Lighting
-MRUItem5=/Game/StarterContent/Maps/Minimal_Default
-MRUItem6=/Game/StarterContent/Maps/StarterMap
-MRUItem7=/Game/VehicleBP/Sedan/Sedan
-MRUItem8=/Game/VehicleBP/VehicleOverview
-MRUItem9=/Game/VehicleBP/Blueprints/VehicleGameMode
+MRUItem0=/Game/Others/Rocket/rocketbp
+MRUItem1=/Game/Others/Box/BoxBP
+MRUItem2=/Game/Others/rocket
+MRUItem3=/Game/Others/None
+MRUItem4=/Game/Others/box
+MRUItem5=/Game/Levels/MainLevel
+MRUItem6=/Game/Levels/CircuitTestMap
+MRUItem7=/Game/UnrealAssets/VehicleBP/Sedan/Sedan1
+MRUItem8=/Game/UnrealAssets/VehicleBP/Sedan/Sedan
+MRUItem9=/Game/StarterContent/Maps/Advanced_Lighting
+MRUItem10=/Game/StarterContent/Maps/Minimal_Default
+MRUItem11=/Game/StarterContent/Maps/StarterMap
+MRUItem12=/Game/VehicleBP/Sedan/Sedan
+MRUItem13=/Game/VehicleBP/VehicleOverview
+MRUItem14=/Game/VehicleBP/Blueprints/VehicleGameMode
 
 [AssetEditorToolkitTabLocation]
 /Game/VehicleBP/Blueprints/VehicleGameMode.VehicleGameMode=1
 /Game/VehicleBP/VehicleOverview.VehicleOverview=1
 /Game/VehicleBP/Sedan/Sedan.Sedan=1
 /Game/UnrealAssets/VehicleBP/Sedan/Sedan.Sedan=1
+/Game/Others/Box/BoxBP.BoxBP=1
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1166,15 +1261,147 @@ ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=FBXImport
 
 [DetailCategoriesAdvanced]
 Sedan_C.SteeringSetup=False
 Sedan_C.VehicleSetup=True
 Sedan_C.VehicleInput=True
 LandscapeSplineSegment.LandscapeSplineMeshes=False
+StaticMeshActor.StaticMesh=False
 
 [SelectionDetails]
-PreserveScaleRatio=False
+PreserveScaleRatio=True
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bUseUnsortedMenus=False
+
+[/Script/UnrealEd.FbxImportUI]
+LodDistance0=0.000000
+LodDistance1=0.000000
+LodDistance2=0.000000
+LodDistance3=0.000000
+LodDistance4=0.000000
+LodDistance5=0.000000
+LodDistance6=0.000000
+LodDistance7=0.000000
+
+[FBX_Import_UI_Option_FbxStaticMeshImportData]
+StaticMeshLODGroup=None
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+bAutoGenerateCollision=True
+bCombineMeshes=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
+NormalGenerationMethod=MikkTSpace
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=50.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxSkeletalMeshImportData]
+VertexColorImportOption=Replace
+VertexOverrideColor=(B=0,G=0,R=0,A=0)
+bUseT0AsRefPose=False
+bPreserveSmoothingGroups=True
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+ThresholdPosition=0.000020
+ThresholdTangentNormal=0.000020
+ThresholdUV=0.000977
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxAnimSequenceImportData]
+AnimationLength=FBXALIT_ExportedTime
+bUseDefaultSampleRate=False
+CustomSampleRate=0
+bImportCustomAttribute=True
+bImportBoneTracks=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxTextureImportData]
+bInvertNormalMaps=False
+MaterialSearchLocation=Local
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
 
 
